[package]
name = "daldalso"
version = "0.1.0"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"
license = "MIT"
description = "daldal.so Oauth API"
repository = "https://github.com/AkiaCode/daldalso.git"
exclude = ["daldalso-test/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }
urlencoding = "1.0.0"
serde_json = "1.0.2"
serde = { version = "1.0", features = ["derive"] }